--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ button{
   <img src="cover.jpg">
   <h1>Recap Học Kỳ I</h1>
   <p>Bảo tàng triển lãm học tập HK1 7A1</p>
-  <img src="intro.jpg" class="intro-img">
+  <img src="z6983045468000_33bf258d6fdbf68088e62005e514055d (4).jpg" class="z6983045468000_33bf258d6fdbf68088e62005e514055d (4).jpg">
   <div class="nav">
     <button onclick="go(1)">Bắt đầu</button>
   </div>
