--- a/index.html
+++ b/index.html
@@ -350,10 +350,10 @@ button{
   <p>Chuyến outing trip là dịp để chúng em thư giãn sau giờ học, gắn kết tập thể và có thêm những trải nghiệm đáng nhớ ngoài khuôn viên trường học.</p>
 
   <div class="gallery">
-    <img src="">
-    <img src="">
-    <img src="">
-    <img src="">
+    <img src="z7351999537067_740c81ea9f2f57dbe25ebde82de4f595.jpg">
+    <img src="z7437666288833_8fb726dd3941bb4ba97e9dfc9412ec39.jpg">
+    <img src="z7437670821150_579318ba8caa6cb0abae1dd89838384d.jpg">
+    <img src="z7437677072575_cd591a9660dc00c5c460ba6d11538159.jpg">
     <img src="">
     <img src="">
     <img src="">
