--- a/index.html
+++ b/index.html
@@ -358,6 +358,13 @@ button{
     <img src="">
     <img src="">
   </div>
+  
+  <video class="event-video" controls preload="metadata">
+    <source src="" type="video/mp4">
+    <source src="" type="video/mp4">
+    Trình duyệt của bạn không hỗ trợ video.
+  </video>
+
 
   <div class="nav">
     <button onclick="go(9)">Trước</button>
