--- a/index.html
+++ b/index.html
@@ -161,8 +161,11 @@ button{
     <img src="DSC03421.jpg">
     <img src="3W3A1485.JPG">
     <img src="3W3A1348 (1).JPG">
-    <img src="_DSC8400 (1).JPG">
+    <img src="_DSC8400 (2).JPG">
     <img src="3W3A1349.JPG">
+    <img src="3W3A1477.jpg">
+    <img src="3W3A1343.jpg">
+    <img src="_DSC8468.jpg">
   </div>
   <div class="nav">
     <button onclick="go(0)">Trước</button>
@@ -180,6 +183,9 @@ button{
     <img src="3W3A0352.jpg">
     <img src="3W3A0225 (1).JPG">
     <img src="3W3A0347 (1).jpg">
+    <img src="_1.jpg">
+    <img src="_4.jpg">
+    <img src="3W3A0277 (1).jpg">
   </div>
   <div class="nav">
     <button onclick="go(1)">Trước</button>
@@ -260,8 +266,10 @@ button{
     <img src="z7153138148492_cc6f53bc9ae9c8b8e363fbb93504bdcb.jpg">
     <img src="z7155101269356_bbd12adc50f77aeef7a701fb114da04d.jpg">
     <img src="z7155101212247_f105711cbf073cd3aaa53297acac748a.jpg">
-    <img src="z7154638360454_1d93eddb00b59c76f95a7ff787ea96aa.jpg">
     <img src="z7154638356291_b0d29ebf0a5fe92038d1f3cd9321463d.jpg">
+    <img src="z7154638360454_1d93eddb00b59c76f95a7ff787ea96aa (1).jpg">
+    <img src="z7153017297763_be00a31d9c598039cb134e3f200e46db.jpg">
+    <img src="z7153017314656_b067d3590bf425e24bbfb0c6a6fefa18.jpg">
   </div>
 
   <div class="nav">
@@ -283,12 +291,15 @@ button{
     <img src="z7434652716792_8fbc187bc395f6271de3560e99e3f9d7.jpg">
     <img src="z7434652684487_15f6d30200725d9e2d1a1caa98d8a998.jpg">
     <img src="z7434652700030_a157b67a1452bfa553fd1230664a481f.jpg">
+    <img src="z7434658835003_e575c231823ca716bfc48ef9e297c666.jpg">
+    <img src="z7434658826879_8c8a039af8b4cfc4bf38f94649176824.jpg">
+    <img src="z7434658840014_93de13d89a5924441595b311f5771c56.jpg">
+    <img src="z7434655051879_49302a282b982b35948c33e1eb86f5b8.jpg">
+    <img src="z7434653297217_31feaad926637f56470877359eb494ce.jpg">
   </div>
 
   <video class="event-video" controls preload="metadata">
-    <source src="7434650371279.mp4" type="video/mp4">
-    <source src="7434650436944 (1).mp4" type="video/mp4">
-    Trình duyệt của bạn không hỗ trợ video.
+    <source src="7434650436944 (1).mp4"type="video/mp4">
   </video>
 
   <div class="nav">
@@ -311,7 +322,7 @@ button{
     <img src="z7434665499470_7d3f54ae90f8812fa99b8b53f7b58b73.jpg">
     <img src="z7434665434315_4b7de55d4243770871f710fb15ea1a20.jpg">
     <img src="z7434665530905_9a467fc6919bad64a251e3807404b755.jpg">
-    <img src="z7434665467077_34651c5af68c7d2f33a4ca96bedf9b1c.jpg">
+    <img src="z7434665521043_af431f834b39565f894d62586d2cb8a3.jpg">
     <img src="z7434665458187_5af4ab4c1a7cd3a81a2db56c9be14d67.jpg">
   </div>
 
@@ -360,9 +371,8 @@ button{
   </div>
   
   <video class="event-video" controls preload="metadata">
+    <source src="Video Project 3.mp4" type="video/mp4">
     <source src="" type="video/mp4">
-    <source src="" type="video/mp4">
-    Trình duyệt của bạn không hỗ trợ video.
   </video>
 
 
