--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ button{
 
 <!-- ===== COVER ===== -->
 <div class="page active cover">
-  <img src="cover.jpg">
+  <img src="z7080224538756_951a8b760126faf5cc7287413681d1ee.jpg">
   <h1>Recap Học Kỳ I</h1>
   <p>Bảo tàng triển lãm học tập HK1 7A1</p>
   <img src="z6983045468000_33bf258d6fdbf68088e62005e514055d (4).jpg" class="z6983045468000_33bf258d6fdbf68088e62005e514055d (4).jpg">
