--- a/index.html
+++ b/index.html
@@ -381,6 +381,27 @@ button{
     <button onclick="go(11)">Sau</button>
   </div>
 </div>
+  <!-- ===== OUT EVENT ===== -->
+<div class="page event">
+  <h2>Liên hoan và ăn uống</h2>
+  <p></p>
+
+  <div class="gallery">
+    <img src="z7434655054279_4ae4af2147d810dcf5aa75d9abff6492.jpg">
+    <img src="z7434655066211_fe2d8e3f7d45d03c84fe8500664e8239.jpg">
+    <img src="z7434655033654_c065f31fb4403009ee84edf7551cfd8b.jpg">
+    <img src="z7434655048638_f7a2e7c0aa86b0716a1865a25d6cd7d6.jpg">
+    <img src="z7434655024789_af8ef24ced81dec3559c60b68a0bcb8b.jpg">
+    <img src="z7434655036903_c1a6ef675d184237bc696d35a517836e.jpg">
+    
+
+  </div>
+
+  <div class="nav">
+    <button onclick="go(5)">Trước</button>
+    <button onclick="go(7)">Sau</button>
+  </div>
+</div>
 <!-- ===== END ===== -->
 <div class="page end">
   <h2>Cảm ơn vì đã xem</h2>
