--- a/index.html
+++ b/index.html
@@ -298,10 +298,6 @@ button{
     <img src="z7434653297217_31feaad926637f56470877359eb494ce.jpg">
   </div>
 
-  <video class="event-video" controls preload="metadata">
-    <source src="7434650436944 (1).mp4"type="video/mp4">
-  </video>
-
   <div class="nav">
     <button onclick="go(6)">Trước</button>
     <button onclick="go(8)">Sau</button>
@@ -370,12 +366,6 @@ button{
     <img src="">
   </div>
   
-  <video class="event-video" controls preload="metadata">
-    <source src="Video Project 3.mp4" type="video/mp4">
-    <source src="" type="video/mp4">
-  </video>
-
-
   <div class="nav">
     <button onclick="go(9)">Trước</button>
     <button onclick="go(11)">Sau</button>
@@ -385,7 +375,7 @@ button{
 <div class="page event">
   <h2>Liên hoan và ăn uống</h2>
   <p></p>
-
+  
   <div class="gallery">
     <img src="z7434655054279_4ae4af2147d810dcf5aa75d9abff6492.jpg">
     <img src="z7434655066211_fe2d8e3f7d45d03c84fe8500664e8239.jpg">
@@ -394,6 +384,13 @@ button{
     <img src="z7434655024789_af8ef24ced81dec3559c60b68a0bcb8b.jpg">
     <img src="z7434655036903_c1a6ef675d184237bc696d35a517836e.jpg">
     
+  <!-- ===== OUT EVENT ===== -->
+<div class="page event">
+  <h2>Recap VUI VẺ </h2>
+  <p></p>
+  <video class="event-video" controls preload="none">
+  <source src="7438269545851 (1).mp4" type="video/mp4">
+</video>
 
   </div>
 
