--- a/index.html
+++ b/index.html
@@ -158,14 +158,14 @@ button{
   <h2>Ngày định hướng</h2>
   <p>Ngày định hướng là dịp để chúng em làm quen với môi trường mới, hiểu rõ hơn về thầy cô, bạn bè và định hình mục tiêu học tập cho chặng đường phía trước. [Ngày 1/8]</p>
   <div class="gallery">
-    <img src="DSC03421.jpg">
-    <img src="3W3A1485.JPG">
-    <img src="3W3A1348 (1).JPG">
-    <img src="_DSC8400 (2).JPG">
-    <img src="3W3A1349.JPG">
-    <img src="3W3A1477.jpg">
-    <img src="3W3A1343.jpg">
-    <img src="_DSC8468.jpg">
+    <img src="DSC03421.jpg"loading="lazy">
+    <img src="3W3A1485.JPG"loading="lazy">
+    <img src="3W3A1348 (1).JPG"loading="lazy">
+    <img src="_DSC8400 (2).JPGloading="lazy"">
+    <img src="3W3A1349.JPG"loading="lazy">
+    <img src="3W3A1477.jpg"loading="lazy">
+    <img src="3W3A1343.jpg"loading="lazy">
+    <img src="_DSC8468.jpg"loading="lazy">
   </div>
   <div class="nav">
     <button onclick="go(0)">Trước</button>
@@ -178,11 +178,11 @@ button{
   <h2>Khai giảng</h2>
   <p>Ngày khai giảng được tổ chức tại sân trường với các nghi thức cơ bản, chính thức mở đầu năm học mới. [Ngày 5/9]</p>
   <div class="gallery">
-    <img src="IMG_0405.jpg">
-    <img src="3W3A0222.jpg">
-    <img src="3W3A0352.jpg">
-    <img src="3W3A0225 (1).JPG">
-    <img src="3W3A0347 (1).jpg">
+    <img src="IMG_0405.jpg"loading="lazy">
+    <img src="3W3A0222.jpg"loading="lazy">
+    <img src="3W3A0352.jpg"loading="lazy">
+    <img src="3W3A0225 (1).JPG"loading="lazy">
+    <img src="3W3A0347 (1).jpg"loading="lazy">
     <img src="_1.jpg">
     <img src="_4.jpg">
     <img src="3W3A0277 (1).jpg">
