--- a/index.html
+++ b/index.html
@@ -158,14 +158,14 @@ button{
   <h2>Ngày định hướng</h2>
   <p>Ngày định hướng là dịp để chúng em làm quen với môi trường mới, hiểu rõ hơn về thầy cô, bạn bè và định hình mục tiêu học tập cho chặng đường phía trước. [Ngày 1/8]</p>
   <div class="gallery">
-    <img src="DSC03421.jpg"loading="lazy">
-    <img src="3W3A1485.JPG"loading="lazy">
-    <img src="3W3A1348 (1).JPG"loading="lazy">
-    <img src="_DSC8400 (2).JPG"loading="lazy">
-    <img src="3W3A1349.JPG"loading="lazy">
-    <img src="3W3A1477.jpg"loading="lazy">
-    <img src="3W3A1343.jpg"loading="lazy">
-    <img src="_DSC8468.jpg"loading="lazy">
+    <img src="DSC03421.jpg">
+    <img src="3W3A1485.JPG">
+    <img src="3W3A1348 (1).JPG">
+    <img src="_DSC8400 (2).JPG>
+    <img src="3W3A1349.JPG">
+    <img src="3W3A1477.jpg">
+    <img src="3W3A1343.jpg">
+    <img src="_DSC8468.jpg">
   </div>
   <div class="nav">
     <button onclick="go(0)">Trước</button>
@@ -178,11 +178,11 @@ button{
   <h2>Khai giảng</h2>
   <p>Ngày khai giảng được tổ chức tại sân trường với các nghi thức cơ bản, chính thức mở đầu năm học mới. [Ngày 5/9]</p>
   <div class="gallery">
-    <img src="IMG_0405.jpg"loading="lazy"loading="lazy">
-    <img src="3W3A0222.jpg"loading="lazy"loading="lazy">
-    <img src="3W3A0352.jpg"loading="lazy"loading="lazy">
-    <img src="3W3A0225 (1).JPG"loading="lazy"loading="lazy">
-    <img src="3W3A0347 (1).jpg"loading="lazy"loading="lazy">
+    <img src="IMG_0405.jpg">
+    <img src="3W3A0222.jpg">
+    <img src="3W3A0352.jpg">
+    <img src="3W3A0225 (1).JPG">
+    <img src="3W3A0347 (1).jpg">
     <img src="_1.jpg"loading="lazy">
     <img src="_4.jpg"loading="lazy">
     <img src="3W3A0277 (1).jpg"loading="lazy">
@@ -198,14 +198,14 @@ button{
   <h2>Họp PH lần 1</h2>
   <p>Buổi họp phụ huynh là dịp để nhà trường và gia đình cùng trao đổi về tình hình học tập, rèn luyện của học sinh, thống nhất cách phối hợp giáo dục và định hướng cho thời gian học tập sắp tới. [Ngày 6/9]</p>
   <div class="gallery">
-    <img src="IMG_9689.JPG"loading="lazy">
-    <img src="IMG_9710.JPG"loading="lazy">
-    <img src="IMG_9713.JPG"loading="lazy">
-    <img src="IMG_9698.JPG"loading="lazy">
-    <img src="IMG_9712.JPG"loading="lazy">
-    <img src="IMG_9674.JPG"loading="lazy">
-    <img src="IMG_9695.JPG"loading="lazy">
-    <img src="IMG_9683.JPG"loading="lazy">
+    <img src="IMG_9689.JPG">
+    <img src="IMG_9710.JPG">
+    <img src="IMG_9713.JPG">
+    <img src="IMG_9698.JPG">
+    <img src="IMG_9712.JPG">
+    <img src="IMG_9674.JPG">
+    <img src="IMG_9695.JPG">
+    <img src="IMG_9683.JPG">
   </div>
   <div class="nav">
     <button onclick="go(2)">Trước</button>
@@ -218,14 +218,14 @@ button{
   <h2>Bước chân tình nguyện</h2>
   <p>Bước chân tình nguyện là nơi chúng em có thể chung tay giúp đỡ những hoàn cảnh khó khăn, lan tỏa tinh thần sẻ chia và trách nhiệm với cộng đồng.</p>
   <div class="gallery">
-    <img src="20251004_014404160_iOS (1).jpg"loading="lazy">
-    <img src="20251004_013821010_iOS (1).jpg"loading="lazy">
-    <img src="IMGP8491.JPG"loading="lazy">
-    <img src="IMGP8489.JPG"loading="lazy">
-    <img src="IMGP8492 (1).JPG"loading="lazy">
-    <img src="IMGP8483.JPG"loading="lazy">
-    <img src="z7080223795901_798e4f5b0e279416eeb097da4e5c42ec.jpg"loading="lazy">
-    <img src="IMGP8509.JPG"loading="lazy">
+    <img src="20251004_014404160_iOS (1).jpg">
+    <img src="20251004_013821010_iOS (1).jpg">
+    <img src="IMGP8491.JPG">
+    <img src="IMGP8489.JPG">
+    <img src="IMGP8492 (1).JPG">
+    <img src="IMGP8483.JPG">
+    <img src="z7080223795901_798e4f5b0e279416eeb097da4e5c42ec.jpg">
+    <img src="IMGP8509.JPG">
   </div>
   <div class="nav">
     <button onclick="go(3)">Trước</button>
@@ -238,15 +238,15 @@ button{
   <h2>Văn nghệ HK1</h2>
   <p>Văn nghệ là nơi chúng em được tỏa sáng với những ý tưởng sáng tạo, tự tin thể hiện tài năng cá nhân và tinh thần tập thể, qua đó khẳng định màu cờ sắc áo của tập thể mình.</p>
   <div class="gallery">
-    <img src="Image (17) (1).jpg"loading="lazy">
-    <img src="Image (21) (1).jpg"loading="lazy">
-    <img src="Image (19) (1).jpg"loading="lazy">
-    <img src="IMG_4254 (1).JPG"loading="lazy">
-    <img src="IMG_9094.JPG"loading="lazy">
-    <img src="IMG_9102.JPG"loading="lazy">
-    <img src="IMG_4243.JPG"loading="lazy">
-    <img src="IMG_9110.JPG"loading="lazy">
-    <img src="z7130106225304_a8e66bf15ba06c0adf13eb9fd5330086.jpg"loading="lazy">
+    <img src="Image (17) (1).jpg">
+    <img src="Image (21) (1).jpg">
+    <img src="Image (19) (1).jpg">
+    <img src="IMG_4254 (1).JPG">
+    <img src="IMG_9094.JPG">
+    <img src="IMG_9102.JPG>
+    <img src="IMG_4243.JPG">
+    <img src="IMG_9110.JPG">
+    <img src="z7130106225304_a8e66bf15ba06c0adf13eb9fd5330086.jpg">
     <img src="IMG_9115.JPG">
     <img src="Image (16) (1).jpg">
   </div>
@@ -260,17 +260,17 @@ button{
   <h2>Công tác xã hội HK1</h2>
   <p>Công tác xã hội là hoạt động giúp chúng em có cơ hội tham gia hỗ trợ, sẻ chia và kết nối với mọi người, từ đó nâng cao ý thức trách nhiệm đối với cộng đồng.</p>
 
-  <div class="gallery">
-    <img src="z7153207112352_463b8569702b62b6359df4b0a82b73ea.jpg"loading="lazy">
-    <img src="z7154343469137_dc7032900494dfb14f30fdbe39177c80.jpg"loading="lazy">
-    <img src="z7153138148492_cc6f53bc9ae9c8b8e363fbb93504bdcb.jpg"loading="lazy">
-    <img src="z7155101269356_bbd12adc50f77aeef7a701fb114da04d.jpg"loading="lazy">
-    <img src="z7155101212247_f105711cbf073cd3aaa53297acac748a.jpg"loading="lazy">
-    <img src="z7154638356291_b0d29ebf0a5fe92038d1f3cd9321463d.jpg"loading="lazy">
-    <img src="z7154638360454_1d93eddb00b59c76f95a7ff787ea96aa (1).jpg"loading="lazy">
-    <img src="z7153017297763_be00a31d9c598039cb134e3f200e46db.jpg"loading="lazy">
-    <img src="z7153017314656_b067d3590bf425e24bbfb0c6a6fefa18.jpg"loading="lazy">
-  </div>
+<div class="gallery">
+  <img src="z7153207112352_463b8569702b62b6359df4b0a82b73ea.jpg">
+  <img src="z7154343469137_dc7032900494dfb14f30fdbe39177c80.jpg">
+  <img src="z7153138148492_cc6f53bc9ae9c8b8e363fbb93504bdcb.jpg">
+  <img src="z7155101269356_bbd12adc50f77aeef7a701fb114da04d.jpg">
+  <img src="z7155101212247_f105711cbf073cd3aaa53297acac748a.jpg">
+  <img src="z7154638356291_b0d29ebf0a5fe92038d1f3cd9321463d.jpg">
+  <img src="z7154638360454_1d93eddb00b59c76f95a7ff787ea96aa (1).jpg">
+  <img src="z7153017297763_be00a31d9c598039cb134e3f200e46db.jpg">
+  <img src="z7153017314656_b067d3590bf425e24bbfb0c6a6fefa18.jpg">
+</div>
 
   <div class="nav">
     <button onclick="go(5)">Trước</button>
@@ -283,20 +283,20 @@ button{
   <h2>Hội thao HK1</h2>
   <p>Hội thao là dịp để chúng em rèn luyện sức khỏe, phát huy tinh thần đoàn kết và thi đấu hết mình, góp phần tạo nên không khí sôi nổi và gắn kết tập thể.</p>
 
-  <div class="gallery">
-    <img src="z7434652672199_efc89dc219f0ea4e7f0dce9e073a7bcd.jpg"loading="lazy">
-    <img src="z7434652712095_6d77653491a631aebd1817eab3b51bec.jpg"loading="lazy">
-    <img src="z7434652691420_75b95588323c1a49e8798a14ccfb7b2b.jpg"loading="lazy">
-    <img src="z7434652678559_55471b800769011a25dca0c57736b762.jpg"loading="lazy">
-    <img src="z7434652716792_8fbc187bc395f6271de3560e99e3f9d7.jpg"loading="lazy">
-    <img src="z7434652684487_15f6d30200725d9e2d1a1caa98d8a998.jpg"loading="lazy">
-    <img src="z7434652700030_a157b67a1452bfa553fd1230664a481f.jpg"loading="lazy">
-    <img src="z7434658835003_e575c231823ca716bfc48ef9e297c666.jpg"loading="lazy">
-    <img src="z7434658826879_8c8a039af8b4cfc4bf38f94649176824.jpg"loading="lazy">
-    <img src="z7434658840014_93de13d89a5924441595b311f5771c56.jpg"loading="lazy">
-    <img src="z7434655051879_49302a282b982b35948c33e1eb86f5b8.jpg"loading="lazy">
-    <img src="z7434653297217_31feaad926637f56470877359eb494ce.jpg"loading="lazy">
-  </div>
+ <div class="gallery">
+  <img src="z7434652672199_efc89dc219f0ea4e7f0dce9e073a7bcd.jpg">
+  <img src="z7434652712095_6d77653491a631aebd1817eab3b51bec.jpg">
+  <img src="z7434652691420_75b95588323c1a49e8798a14ccfb7b2b.jpg">
+  <img src="z7434652678559_55471b800769011a25dca0c57736b762.jpg">
+  <img src="z7434652716792_8fbc187bc395f6271de3560e99e3f9d7.jpg">
+  <img src="z7434652684487_15f6d30200725d9e2d1a1caa98d8a998.jpg">
+  <img src="z7434652700030_a157b67a1452bfa553fd1230664a481f.jpg">
+  <img src="z7434658835003_e575c231823ca716bfc48ef9e297c666.jpg">
+  <img src="z7434658826879_8c8a039af8b4cfc4bf38f94649176824.jpg">
+  <img src="z7434658840014_93de13d89a5924441595b311f5771c56.jpg">
+  <img src="z7434655051879_49302a282b982b35948c33e1eb86f5b8.jpg">
+  <img src="z7434653297217_31feaad926637f56470877359eb494ce.jpg">
+</div>
 
   <div class="nav">
     <button onclick="go(6)">Trước</button>
@@ -309,18 +309,19 @@ button{
   <h2>Ngày Nhà Giáo Việt Nam</h2>
   <p>Ngày Nhà giáo Việt Nam là dịp để chúng em bày tỏ lòng biết ơn, sự kính trọng và tri ân sâu sắc đến thầy cô – những người đã tận tâm dìu dắt chúng em trên con đường học tập.</p>
 
-  <div class="gallery">
-    <img src="z7434665435079_eefa65e774757fd6b1db59af60af4558.jpg"loading="lazy">
-    <img src="z7434665446755_00dc65de170987b4cc41d447208e11cb.jpg"loading="lazy">
-    <img src="z7434665451432_a49bee2959ad80a070427d22665a9626.jpg"loading="lazy">
-    <img src="z7434665467432_403417933f2d095a157592b21303034b.jpg"loading="lazy">
-    <img src="z7434665541528_92fec0f0f90a3e20e7db121965cb3692.jpg"loading="lazy">
-    <img src="z7434665499470_7d3f54ae90f8812fa99b8b53f7b58b73.jpg"loading="lazy">
-    <img src="z7434665434315_4b7de55d4243770871f710fb15ea1a20.jpg"loading="lazy">
-    <img src="z7434665530905_9a467fc6919bad64a251e3807404b755.jpg"loading="lazy">
-    <img src="z7434665521043_af431f834b39565f894d62586d2cb8a3.jpg"loading="lazy">
-    <img src="z7434665458187_5af4ab4c1a7cd3a81a2db56c9be14d67.jpg"loading="lazy">
-  </div>
+<div class="gallery">
+  <img src="z7434665435079_eefa65e774757fd6b1db59af60af4558.jpg">
+  <img src="z7434665446755_00dc65de170987b4cc41d447208e11cb.jpg">
+  <img src="z7434665451432_a49bee2959ad80a070427d22665a9626.jpg">
+  <img src="z7434665467432_403417933f2d095a157592b21303034b.jpg">
+  <img src="z7434665541528_92fec0f0f90a3e20e7db121965cb3692.jpg">
+  <img src="z7434665499470_7d3f54ae90f8812fa99b8b53f7b58b73.jpg">
+  <img src="z7434665434315_4b7de55d4243770871f710fb15ea1a20.jpg">
+  <img src="z7434665530905_9a467fc6919bad64a251e3807404b755.jpg">
+  <img src="z7434665521043_af431f834b39565f894d62586d2cb8a3.jpg">
+  <img src="z7434665458187_5af4ab4c1a7cd3a81a2db56c9be14d67.jpg">
+</div>
+Còn block nào nữa thì 
 
   <div class="nav">
     <button onclick="go(7)">Trước</button>
@@ -333,17 +334,19 @@ button{
   <h2>Học tập trải nghiệm & Teambuilding K7</h2>
   <p>Học tập trải nghiệm là hoạt động giúp chúng em học hỏi qua thực tế, rèn luyện kỹ năng và mở rộng hiểu biết, từ đó gắn kiến thức với cuộc sống hằng ngày.</p>
 
-  <div class="gallery">
-    <img src="z7434941640286_8c8dd3b1cbac12a9453a60d692ebe6f8.jpg"loading="lazy">
-    <img src="z7434941654505_c648328fb4dae8e2da7f4ea23f11ab83.jpg"loading="lazy">
-    <img src="z7434941646849_1b17e9429e490a9588374f4b7e792a72.jpg"loading="lazy">
-    <img src="z7434941661245_f7a53b2be0c0ffe5016088b219e84aed.jpg"loading="lazy">
-    <img src="z7434941636136_52b84d5343e15df38c654bc6ab15abf5.jpg"loading="lazy">
-    <img src="z7422684077240_44d20b8930058892265fae10e7fa2ec2.jpg"loading="lazy">
-    <img src="z7422689486609_e80b221ee9b182de0e29f89b67d7b5dc.jpg"loading="lazy">
-    <img src="z7424322670583_19d23ef47de07216187073e0ec41bbef.jpg"loading="lazy">
-    <img src="z7424322677401_2ce60ab4005b794fff488697f228d298.jpg"loading="lazy">
-  </div>
+<div class="gallery">
+  <img src="">
+  <img src="">
+  <img src="">
+  <img src="">
+  <img src="">
+  <img src="">
+  <img src="z7434665434315_4b7de55d4243770871f710fb15ea1a20.jpg">
+  <img src="z7434665530905_9a467fc6919bad64a251e3807404b755.jpg">
+  <img src="z7434665521043_af431f834b39565f894d62586d2cb8a3.jpg">
+  <img src="z7434665458187_5af4ab4c1a7cd3a81a2db56c9be14d67.jpg">
+</div>
+Còn block nào nữa thì 
 
   <div class="nav">
     <button onclick="go(8)">Trước</button>
