--- a/index.html
+++ b/index.html
@@ -382,7 +382,13 @@ button{
     <img src="z7434655048638_f7a2e7c0aa86b0716a1865a25d6cd7d6.jpg"loading="lazy">
     <img src="z7434655024789_af8ef24ced81dec3559c60b68a0bcb8b.jpg"loading="lazy">
     <img src="z7434655036903_c1a6ef675d184237bc696d35a517836e.jpg"loading="lazy">
-    
+     </div>
+  
+  <div class="nav">
+    <button onclick="go(9)">Trước</button>
+    <button onclick="go(11)">Sau</button>
+  </div>
+</div>
   <!-- ===== OUT EVENT ===== -->
 <div class="page event">
   <h2>Recap VUI VẺ </h2>
