--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@ button{
     <button onclick="go(11)">Sau</button>
   </div>
 </div>
- <!-- ===== in EVENT ===== --> 
+ <!-- ===== 11 EVENT ===== --> 
 <div class="page event">
   <h2>Liên hoan và ăn uống</h2>
   <p></p>
@@ -390,7 +390,7 @@ button{
   </div>
 </div>
 
-<!-- ===== OUT EVENT ===== -->
+<!-- ===== 12 EVENT ===== -->
 <div class="page event">
   <h2>Recap VUI VẺ</h2>
   <p></p>
