--- a/index.html
+++ b/index.html
@@ -161,10 +161,8 @@ button{
     <img src="DSC03421.jpg">
     <img src="3W3A1485.JPG">
     <img src="3W3A1348 (1).JPG">
-    <img src="_DSC8400 (2).JPG>
     <img src="3W3A1349.JPG">
     <img src="3W3A1477.jpg">
-    <img src="3W3A1343.jpg">
     <img src="_DSC8468.jpg">
   </div>
   <div class="nav">
@@ -183,9 +181,9 @@ button{
     <img src="3W3A0352.jpg">
     <img src="3W3A0225 (1).JPG">
     <img src="3W3A0347 (1).jpg">
-    <img src="_1.jpg"loading="lazy">
-    <img src="_4.jpg"loading="lazy">
-    <img src="3W3A0277 (1).jpg"loading="lazy">
+    <img src="_1.jpg">
+    <img src="_4.jpg">
+    <img src="3W3A0277 (1).jpg">
   </div>
   <div class="nav">
     <button onclick="go(1)">Trước</button>
