--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ button{
     <img src="3W3A1348 (1).JPG">
     <img src="3W3A1349.JPG">
     <img src="3W3A1477.jpg">
-    <img src="_DSC8468.jpg">
+    <img src="Screenshot 2026-01-17 074948.png">
   </div>
   <div class="nav">
     <button onclick="go(0)">Trước</button>
@@ -181,8 +181,8 @@ button{
     <img src="3W3A0352.jpg">
     <img src="3W3A0225 (1).JPG">
     <img src="3W3A0347 (1).jpg">
-    <img src="_1.jpg">
-    <img src="_4.jpg">
+    <img src="g">
+    <img src="">
     <img src="3W3A0277 (1).jpg">
   </div>
   <div class="nav">
