--- a/index.html
+++ b/index.html
@@ -181,8 +181,8 @@ button{
     <img src="3W3A0352.jpg">
     <img src="3W3A0225 (1).JPG">
     <img src="3W3A0347 (1).jpg">
-    <img src="g">
-    <img src="">
+    <img src="Screenshot 2026-01-17 075308.png">
+    <img src="Screenshot 2026-01-17 075241.png">
     <img src="3W3A0277 (1).jpg">
   </div>
   <div class="nav">
@@ -368,18 +368,25 @@ button{
     <button onclick="go(11)">Sau</button>
   </div>
 </div>
- <!-- ===== 11 EVENT ===== --> 
+ <!-- ===== 12.1.2.3 EVENT ===== --> 
 <div class="page event">
-  <h2>Liên hoan và ăn uống</h2>
+  <h2>Liên hoan & Chia sẻ sách & Cờ vàng (Khoảng khắc đáng nhớ)</h2>
   <p></p>
   
   <div class="gallery">
     <img src="z7434655054279_4ae4af2147d810dcf5aa75d9abff6492.jpg">
     <img src="z7434655066211_fe2d8e3f7d45d03c84fe8500664e8239.jpg">
-    <img src="z7434655033654_c065f31fb4403009ee84edf7551cfd8b.jpg">
-    <img src="z7434655048638_f7a2e7c0aa86b0716a1865a25d6cd7d6.jpg">
-    <img src="z7434655024789_af8ef24ced81dec3559c60b68a0bcb8b.jpg">
-    <img src="z7434655036903_c1a6ef675d184237bc696d35a517836e.jpg">
+    <img src="Image (20).jpg">
+    <img src="Image (22).jpg">
+    <img src="Image (23).jpg">
+    <img src="Image (24).jpg">
+    <img src="Image (25).jpg">
+    <img src="Screenshot 2026-01-17 083217.png">
+    <img src="Screenshot 2026-01-17 083208.png">
+    <img src="Screenshot 2026-01-17 083157.png">
+    <img src="Screenshot 2026-01-17 083145.png">
+    
+    
   </div>
   
   <div class="nav">
@@ -387,11 +394,16 @@ button{
     <button onclick="go(12)">Sau</button>
   </div>
 </div>
-
+  
+  <div class="nav">
+    <button onclick="go(10)">Trước</button>
+    <button onclick="go(12)">Sau</button>
+  </div>
+</div>
 <!-- ===== 12 EVENT ===== -->
 <div class="page event">
   <h2>Recap VUI VẺ</h2>
-  <p></p>
+ <p>Video này để lưu lại những kỉ niệm vui của lớp trong HK1, ba mẹ nào muốn xem thêm thì xem ạ </p>
 
   <video class="event-video" controls preload="none">
     <source src="7438269545851 (1).mp4" type="video/mp4">
